# airfoil_shape_opt_deep_rl

./: README.md  pyproject.toml  run_train.sh  run_train_nice.sh  run_train_nignet.sh  simulation_tutorial.ipynb  train.py  train_nice.py  train_nignet.py
cfd_utils/: aerodynamics.py
gym_envs/: nignet_shape_env.py
resources/: README.md
shape_assets/: fit_nignet_to_airfoil.py  nignet_normalized.py
shape_assets/models/: nignet_normalized_fit_to_naca0010.pth
src/gym_envs/: nice_shape_env.py  nignet_shape_env.py
src/shape_assets/: fit_nice_airfoil_to_airfoil.py  fit_nice_airfoil_to_airfoil_small.py  fit_nignet_airfoil_to_airfoil.py  fit_nignet_to_airfoil.py  nice_normalized.py  nignet_normalized.py  preaux_net_airfoil.py  utils.py
src/shape_assets/models/: nice_airfoil_normalized_fit_to_naca0010.pth  nice_airfoil_normalized_fit_to_naca0010_small.pth  nignet_airfoil_normalized_fit_to_naca0010.pth  nignet_normalized_fit_to_naca0010.pth
