[project]
name = "airfoil_shape_opt_deep_rl"
version = "0.1.0"
description = "Aerodynamic shape optimization using deep reinforcement learning."
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "xfoil",
]

[tool.uv.sources]
xfoil = { git = "https://github.com/DARcorporation/xfoil-python.git" }
