[project]
name = "airfoil_shape_opt_deep_rl"
version = "0.1.0"
description = "Aerodynamic shape optimization using deep reinforcement learning."
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "geodiff>=0.9.5",
    "gymnasium>=1.2.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "stable-baselines3[extra]>=2.7.0",
    "xfoil",
]

[tool.uv.sources]
xfoil = { git = "https://github.com/DARcorporation/xfoil-python.git" }
